--- a/index.html
+++ b/index.html
@@ -4,53 +4,64 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mesto</title>
-  <link  rel="stylesheet" href="vendor/normalize.css">
   <link rel="stylesheet" href="pages/index.css">
 </head>
 <body class="page">
   <header class="header">
-    <div class="header__logo"></div>
+    <img class="header__logo" src="images/logo.svg" alt="Место. Россия">
   </header>
   <main class="content">
     <section class="profile">
-      <img class="profile__avatar" src="images/kusto_avatar.jpg" alt="Жак Ив Кусто">
+      <img class="profile__avatar" src="images/kusto_avatar.jpg" alt="Жак-Ив Кусто">
       <div class="profile__info">
         <h1 class="profile__name">Жак-Ив Кусто</h1>
         <p class="profile__about">Исследователь океана</p>
-        <button class="profile__edit-button"></button>
+        <button class="profile__edit-button" type="button"></button>
       </div>
       <button class="profile__add-button"></button>
     </section>
     <section class="photos">
       <article class="photo">
         <img class="photo__place" src="./images/photo/barnaul.jpg" alt="Вид на Барнаул">
-        <h2 class="photo__title">Барнаул</h2>
-        <button class="photo__like-button"></button>
+        <div class="photo__caption">
+          <h2 class="photo__title">Барнаул</h2>
+          <button class="photo__like-button" type="button"></button>
+        </div>
       </article>
       <article class="photo">
         <img class="photo__place" src="./images/photo/krasnodar.jpg" alt="Фонтан">
-        <h2 class="photo__title">Краснодар</h2>
-        <button class="photo__like-button"></button>
+        <div class="photo__caption">
+          <h2 class="photo__title">Краснодар</h2>
+          <button class="photo__like-button" type="button"></button>
+        </div>
       </article>
       <article class="photo">
         <img class="photo__place" src="./images/photo/murmansk.jpg" alt="Маяк">
-        <h2 class="photo__title">Мурманск</h2>
-        <button class="photo__like-button"></button>
+        <div class="photo__caption">
+          <h2 class="photo__title">Мурманск</h2>
+          <button class="photo__like-button" type="button"></button>
+        </div>
       </article>
       <article class="photo">
         <img class="photo__place" src="./images/photo/novosibirsk.jpg" alt="Вид на оперный театр">
-        <h2 class="photo__title">Новосибирск</h2>
-        <button class="photo__like-button"></button>
+        <div class="photo__caption">
+          <h2 class="photo__title">Новосибирск</h2>
+          <button class="photo__like-button" type="button"></button>
+        </div>
       </article>
       <article class="photo">
         <img class="photo__place" src="./images/photo/peterburg.jpg" alt="Мост через Неву">
-        <h2 class="photo__title">Санкт-Петербург</h2>
-        <button class="photo__like-button"></button>
+        <div class="photo__caption">
+          <h2 class="photo__title">Санкт-Петербург</h2>
+          <button class="photo__like-button" type="button"></button>
+        </div>
       </article>
       <article class="photo">
         <img class="photo__place" src="./images/photo/vladivostok.jpg" alt="Ночной вид Владивостока">
-        <h2 class="photo__title">Владивосток</h2>
-        <button class="photo__like-button"></button>
+        <div class="photo__caption">
+          <h2 class="photo__title">Владивосток</h2>
+          <button class="photo__like-button" type="button"></button>
+        </div>
       </article>
     </section>
   </main>
@@ -62,8 +73,8 @@
       <form class="popup__form">
         <button class="popup__close-button" type="reset"></button>
         <h3 class="popup__heading">Редактировать профиль</h3>
-        <input class="popup__input-name" type="text" placeholder="Жак-Ив Кусто" >
-        <input class="popup__input-about" type="text" placeholder="Исследователь океана">
+        <input id="input-name" class="popup__input" type="text" placeholder="Жак-Ив Кусто" >
+        <input id="input-about" class="popup__input" type="text" placeholder="Исследователь океана">
         <button class="popup__submit-button" type="submit">Сохранить</button>
       </form>
     </div>
