--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </section>
   </main>
   <footer class="footer">
-    <p class="footer__copyright">&copy; Mesto Russia</p>
+    <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
   </footer>
   <div class="popup">
     <div class="popup__container">
