--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
       <form id="profileForm" class="popup__form" novalidate>
         <button class="popup__close-button" type="reset"></button>
         <h3 class="popup__heading">Редактировать профиль</h3>
-        <input id="input-name" class="popup__input" type="text" minlength="2" maxlength="40" required placeholder="Имя">
+        <input id="input-name" class="popup__input" type="text" minlength="2" maxlength="40" required placeholder="Имя" autocomplete="off">
         <span id="input-name-error" class="popup__error"></span>
-        <input id="input-about" class="popup__input" type="text" minlength="2" maxlength="200" required placeholder="О себе">
+        <input id="input-about" class="popup__input" type="text" minlength="2" maxlength="200" required placeholder="О себе" autocomplete="off">
         <span id="input-about-error" class="popup__error"></span>
         <button class="popup__submit-button" type="submit">Сохранить</button>
       </form>
@@ -43,9 +43,9 @@
       <form id="photoForm" class="popup__form" novalidate>
         <button class="popup__close-button" type="reset"></button>
         <h3 class="popup__heading">Новое место</h3>
-        <input id="input-place" class="popup__input" type="text" minlength="1" maxlength="30" required placeholder="Название">
+        <input id="input-place" class="popup__input" type="text" minlength="1" maxlength="30" required placeholder="Название" autocomplete="off">
         <span id="input-place-error" class="popup__error"></span>
-        <input id="input-link" class="popup__input" type="url" required placeholder="Ссылка на картинку">
+        <input id="input-link" class="popup__input" type="url" required placeholder="Ссылка на картинку" autocomplete="off">
         <span id="input-link-error" class="popup__error"></span>
         <button class="popup__submit-button" type="submit">Создать</button>
       </form>
