--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,7 @@
   <div id="changeAvatarPopup" class="popup">
     <div class="popup__container">
       <form id="avatarForm" class="popup__form">
-        <button class="popup__close-button" type="reset" aria-label="Закрыть"></buttton>
+        <button class="popup__close-button" type="reset" aria-label="Закрыть"></button>
         <h3 class="popup__heading">Обновить аватар</h3>
         <input id="input-link" name="link" class="popup__input" type="url" required placeholder="Ссылка на картинку" autocomplete="off">
         <span id="input-link-error" class="popup__error"></span>
